# XposedJniTrace

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  jnitraceKey.jks  proguard-rules-dump.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/hook/: JnitraceForC.cpp  invokePrintf.cpp  linkerHandler.cpp  stringHandler.cpp
app/src/main/cpp/includes/: JnitraceForC.h  invokePrintf.h  linkerHandler.h  stringHandler.h
app/src/main/cpp/sec/: CMakeLists.txt  Md5Utils.cpp  Md5Utils.h  cert.cpp  cert.h  checkSign.cpp
app/src/main/java/com/xiaoyouProject/searchbox/: SearchFragment.java
app/src/main/java/com/xiaoyouProject/searchbox/adapter/: SearchHistoryAdapter.java
app/src/main/java/com/xiaoyouProject/searchbox/custom/: CircularRevealAnim.java  IOnItemClickListener.java  IOnSearchClickListener.java
app/src/main/java/com/xiaoyouProject/searchbox/db/: SearchHistoryDB.java
app/src/main/java/com/xiaoyouProject/searchbox/entity/: CustomLink.java
app/src/main/java/com/xiaoyouProject/searchbox/utils/: KeyBoardUtils.java
app/src/main/java/com/zhenxi/jnitrace/: App.java  LHook.java  MainActivity.java
app/src/main/java/com/zhenxi/jnitrace/Hook/: LHook.java
app/src/main/java/com/zhenxi/jnitrace/adapter/: MainListViewAdapter.java
app/src/main/java/com/zhenxi/jnitrace/bean/: AppBean.java
app/src/main/java/com/zhenxi/jnitrace/config/: ConfigKey.java
app/src/main/res/drawable/: ic_link.xml  shape_corner_white.xml
app/src/main/res/layout/: activity_main.xml  activity_xiaomiquan.xml  dialog_input.xml  dialog_search.xml  item_search_link.xml
app/src/main/res/menu/: main_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
nativeLib/: build.gradle
nativeLib/src/main/: AndroidManifest.xml
nativeLib/src/main/cpp/: CMakeLists.txt
nativeLib/src/main/cpp/adapter/: adapter.cpp
nativeLib/src/main/cpp/dlfc/: CMakeLists.txt  dlfcn_compat.cpp  dlfcn_nougat.cpp
nativeLib/src/main/cpp/hook/: CMakeLists.txt  HookUtils.cpp
nativeLib/src/main/cpp/includes/: HookUtils.h  MMKV.h  adapter.h  appUtils.h  dlfcn_compat.h  dlfcn_nougat.h  elf_util.h  fileUtils.h  libpath.h  logging.h  mylibc.h  parse.h  raw_syscall.h  stringUtils.h
nativeLib/src/main/cpp/libpath/: libpath.cpp
nativeLib/src/main/cpp/raw_syscall/: CMakeLists.txt
nativeLib/src/main/cpp/utils/: CMakeLists.txt  appUtils.cpp  fileUtils.cpp  parse.cpp  stringUtils.cpp
(+19 files in other folders)
